# RL_modeling

./: .gitignore  .impeccable.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
configs/hardware/: ascend_910b.yaml  ascend_910c.yaml  cloudmatrix_384.yaml
configs/models/: _template.yaml  deepseekv3_671b.yaml  deepseekv4.yaml  mistral_7b.yaml  pangu_74b_vl.yaml  qwen2_5_72b.yaml  qwen3_235b_moe.yaml
configs/network/: cloudmatrix_384_fullmesh.yaml  hccs_roce_910b.yaml  hccs_roce_910c.yaml
configs/presets/: pangu_74b_vl.yaml
configs/runtime/: deepseekv3_671b_128x_910c.yaml  deepseekv4_256x_910c.yaml  llama3_1_8b_8x_910c.yaml  mistral_7b_8x_910c.yaml  qwen2_5_72b_32x_910c.yaml  qwen3_235b_moe_64x_910c.yaml
docs/: architecture.md  calibration-guide.md  config-reference.md  dynamic-cp-vs-static-cp-findings.md  low-precision-findings.md  result-interpretation.md  troubleshooting.md  ui-audit-baseline.md  ui-audit-final.md
examples/: demo.py  demo_fp4_paper.py  demo_inference.py  demo_low_precision.py  demo_pretraining.py  demo_rl.py
notebooks/: 01_quick_start.ipynb  02_what_if_analysis.ipynb  03_moe_scaling.ipynb
src/llm_perf/: __init__.py  _stage_utils.py  builder.py  cli.py  config.py  cost_analysis.py  dynamic_cp.py  inference.py  (+9 more)
tests/: test_api.py  test_builder.py  test_cli.py  test_config.py  test_cost_analysis.py  test_dynamic_cp.py  test_e2e.py  test_hf_import.py  test_model.py  test_ops.py  test_pipeline.py  test_plots.py  test_pp_pipeline.py  test_precision.py  test_search.py  test_simulator.py  test_timing.py  test_topology.py  test_ui_smoke.py
(+36 files in other folders)
